--- a/index.html
+++ b/index.html
@@ -301,7 +301,8 @@
                         class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">WordPress
                         / CMS</span>
                     <span
-                        class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Inteligencia artificial generativa</span>
+                        class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Inteligencia
+                        artificial generativa</span>
                 </div>
 
                 <h2 class="text-xl font-semibold text-primary-dark mt-6 mb-4 border-b pb-2"><i
@@ -351,15 +352,17 @@
                 <i class="fas fa-laptop-code mr-3 text-accent"></i>Proyecto Destacado
             </h2>
 
-            <div
+            <p class="text-xl sm:text-2xl font-bold text-gray-700">
+                Proyectos propios próximamente... 30/09/2025
+            </p>
+            <!-- <p class="text-sm text-gray-500 mt-2">
+                Próximamente en algo genial. ¡Vuelve pronto!
+            </p> -->
+            <!-- <div
                 class="flex flex-col items-center justify-center h-40 bg-gray-50 rounded-lg border-2 border-dashed border-gray-300 p-4">
-                <p class="text-xl sm:text-2xl font-bold text-gray-700">
-                    Proyectos propios comming soon 🤫
-                </p>
-                <p class="text-sm text-gray-500 mt-2">
-                    Estamos trabajando en algo genial. ¡Vuelve pronto!
-                </p>
-            </div>
+
+
+            </div> -->
         </section>
 
         <a href="https://wa.me/633962600?text=Hola estamos interesados en tu perfil, ¿cuándo podemos hablar?"
