--- a/index.html
+++ b/index.html
@@ -197,8 +197,10 @@
             <p class="text-base sm:text-xl font-light leading-relaxed">
                 Desarrollar soluciones innovadoras en el ámbito del <b class="font-medium-text-accent">desarrollo
                     web</b> y el <b class="font-medium-text-accent">marketing digital</b>,
-                aplicando mis conocimientos y experiencia para <b class="font-medium-text-accent">optimizar procesos y mejorar la experiencia de
-                usuario</b>. Busco un entorno de trabajo dinámico donde pueda crecer profesionalmente y contribuir al éxito
+                aplicando mis conocimientos y experiencia para <b class="font-medium-text-accent">optimizar procesos y
+                    mejorar la experiencia de
+                    usuario</b>. Busco un entorno de trabajo dinámico donde pueda crecer profesionalmente y contribuir
+                al éxito
                 del equipo.
             </p>
         </section>
@@ -265,7 +267,7 @@
                         <p class="text-xs text-gray-500 mb-1">Septiembre 2025 - Actualmente</p>
                         <h4 class="text-lg font-semibold text-primary-dark">Especialista en Marketing Digital y
                             Desarrollo Web</h4>
-                        <p class="text-sm text-accent mb-3">Inversus</p>
+                        <p class="text-sm text-accent mb-3">Inversus Group</p>
                         <p class="text-sm text-gray-600 mb-3 italic">Establecer las bases de la estrategia digital desde
                             cero.</p>
                         <ul class="list-none space-y-1 text-sm text-gray-700">
@@ -278,6 +280,28 @@
                             <li class="flex items-start"><i
                                     class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Mejora
                                 significativa en la visibilidad online.</li>
+                        </ul>
+                    </div>
+                    <div class="border-l-4 pl-4 border-gray-300 hover:border-accent transition duration-300">
+                        <p class="text-xs text-gray-500 mb-1">Mayo 2025 - Julio 2025</p>
+                        <h4 class="text-lg font-semibold text-primary-dark">Prácticas Formativas Marketing Digital</h4>
+                        <p class="text-sm text-accent mb-3">Inversus Group</p>
+                        <p class="text-sm text-gray-600 mb-3 italic">Apoyé la estrategia digital de la empresa a través
+                            de una auditoría SEO y de rendimiento web.</p>
+                        <ul class="list-none space-y-1 text-sm text-gray-700">
+                            <li class="flex items-start"><i
+                                    class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>
+                                Asistí en la correcta indexación de la página triplicando las
+                                páginas indexadas en Google (de 70 a más de 300) y mejoré la puntuación SEO de
+                                Lighthouse de 54 a 85 en 3 meses al solucionar los problemas de indexación de la página.
+                            </li>
+                            <li class="flex items-start"><i
+                                    class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Detecté
+                                problemas de rendimiento y propuse un plan de optimización con un impacto estimado de
+                                +12% en mejora de carga de la página.</li>
+                            <li class="flex items-start"><i
+                                    class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Gestión de bases
+                                de datos de CRM, análisis de datos y creación de contenido para redes sociales.</li>
                         </ul>
                     </div>
                 </div>
@@ -337,9 +361,11 @@
                         class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Desarrollo
                         Web (HTML, CSS, JS)</span>
                     <span
-                        class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Java, MySQL</span>
+                        class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Java,
+                        MySQL</span>
                     <span
-                        class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Git, Trello</span>
+                        class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Git,
+                        Trello</span>
                     <span
                         class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Marketing
                         Digital (SEO)</span>
