--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
             </section>
         </div>
 
-        <section class="bg-white p-6 sm:p-8 rounded-xl shadow-2xl" id="proyecto">
+        <!-- <section class="bg-white p-6 sm:p-8 rounded-xl shadow-2xl" id="proyecto">
             <h2 class="text-2xl sm:text-3xl font-semibold text-primary-dark mb-6 border-b pb-3">
                 <i class="fas fa-laptop-code mr-3 text-accent"></i>Proyecto Destacado
             </h2>
@@ -431,15 +431,15 @@
             <p class="text-xl sm:text-2xl font-bold text-gray-700">
                 Proyectos propios próximamente... 30/09/2025
             </p>
-            <!-- <p class="text-sm text-gray-500 mt-2">
+            <p class="text-sm text-gray-500 mt-2">
                 Próximamente en algo genial. ¡Vuelve pronto!
             </p> -->
             <!-- <div
                 class="flex flex-col items-center justify-center h-40 bg-gray-50 rounded-lg border-2 border-dashed border-gray-300 p-4">
 
 
-            </div> -->
-        </section>
+            </div> 
+        </section>-->
 
         <a href="https://wa.me/633962600?text=Hola estamos interesados en tu perfil, ¿cuándo podemos hablar?"
             class="float-wa" target="_blank">
@@ -447,10 +447,6 @@
         </a>
 
     </main>
-
-    <!-- <footer class="bg-primary-dark text-white text-center py-6 mt-16">
-        <p class="text-sm">&copy; 2025 Álvaro Pastor. Diseño Premium con Tailwind CSS.</p>
-    </footer> -->
 
     <script>
         // Mobile menu functionality
